src/objects/c2g__codaMassEmailAccountLineItem__c.object
<CustomObject>
    <description>Stores the details of the Mass Email grouping information by account described above.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Mass Email Account Line Items</relationshipLabel>
        <relationshipName>MassEmailAccountLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentOutstandingValue__c</fullName>
        <label>Document Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__MassEmailAccount__c</fullName>
        <label>Mass Email Account</label>
        <referenceTo>c2g__codaMassEmailAccount__c</referenceTo>
        <relationshipLabel>Mass Email Account Line Items</relationshipLabel>
        <relationshipName>MassEmailAccountLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Mass Email Account Line Items</relationshipLabel>
        <relationshipName>MassEmailAccountLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Mass Email Account Line Items</relationshipLabel>
        <relationshipName>MassEmailAccountLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mass Email Account Line Item</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Mass Email Account Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Email Account Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>